<resources>
    <string name="app_name">Location Tracker</string>
    <string name="about_activity_label">About</string>
    <!-- TODO Add real app Id and banner unit id -->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_unit_id_main_fragment" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_unit_id_error_fragment" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_unit_id_about" translatable="false">ca-app-pub-3940256099942544/1033173712</string>


    <string name="main_hint">Please choose a record period and click on the button to start.</string>
    <string name="record_period_hint">Recording period (seconds)</string>
    <string name="record_period_text_edit_hint">Period per sec</string>
    <string name="time_period_default_value">10</string>
    <string name="snackbar_refresh_disabled">Refresh is disabled while tracking location.</string>
    <string name="snackbar_location_permission_denied">Our main feature is saving location. Please refresh and try again.</string>
    <string name="snackbar_export_csv_successful">Saved!</string>
    <string name="snackbar_export_csv_failed">Export failed. Please try again.</string>
    <string name="snackbar_goto_downloads">Downloads</string>
    <string name="snackbar_retry">Retry</string>
    <string name="snackbar_goto_about_error">Please stop recording to visit about page.</string>
    <string name="snackbar_put_app_in_background">Now you can put app in background!</string>
    <string name="error_google_api_is_not_available">Something went wrong! Probably there is no Google Services.
    please make sure Google Services is installed and try again.</string>
    <string name="error_imageview_content_description">Error image</string>
    <string name="error_gps_disabled">Location service is off. Please turn it on and refresh the page.</string>

    <string name="notification_locationservice_title">Recording Location</string>
    <string name="notification_locationservice_content">Please remove this notification only from the app itself :)</string>

    <string name="table_header_timestamp" translatable="false">timestamp</string>
    <string name="table_header_latitude" translatable="false">latitude</string>
    <string name="table_header_longitude" translatable="false">longitude</string>
    <string name="table_header_altitude" translatable="false">altitude</string>
    <string name="table_header_speed" translatable="false">speed</string>

    <string name="menu_item_about">About</string>
    <string name="about_my_app" translatable="false">Location Tracker v1.0</string>
    <string name="about_trademark" translatable="false">\u00A9 2018 Mohsen Oghbaei - WonderfulMe.eu</string>
    <string name="about_found_bug" translatable="false">Found a bug? let us know:</string>
    <string name="about_found_bug_email" translatable="false">info@wonderfulme.eu</string>
    <string name="about_app_lisence" translatable="false">Location Tracker is released under Apache version 2.0.</string>
    <string name="about_used_library_title" translatable="false">Location Tracker uses the following open-source libraries:</string>
    <string name="about_opencsv_website" translatable="false"><a href="http://opencsv.sourceforge.net">OpenCSV</a></string>
    <string name="about_opencsv_license" translatable="false"><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License Version 2.0</a></string>


</resources>
