<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout_main_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/textView_main_hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/main_hint"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_0_2" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_0_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/textView_record_period_hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/record_period_hint"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_0_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editText_record_period"
        app:layout_constraintTop_toBottomOf="@id/horizontal_0_2" />

    <EditText
        android:id="@+id/editText_record_period"
        android:hint="@string/record_period_text_edit_hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="5"
        android:text="@string/time_period_default_value"
        android:inputType="numberDecimal"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/horizontal_0_2"
        app:layout_constraintStart_toEndOf="@id/textView_record_period_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_0_4"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_0_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_start_stop_record"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintTop_toBottomOf="@id/horizontal_0_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_0_9"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_0_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_banner_main_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_unit_id_main_fragment"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/horizontal_0_9"
        ads:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>